# trajectory_node

./: CMakeLists.txt  README.md  package.xml  robot.urdf
src/: trajectory_node.cpp
